--- a/app/index.css
+++ b/app/index.css
@@ -106,6 +106,11 @@ main {
 
 .preview > img {
 	width: 100%;
+	transition: filter 400ms;
+}
+
+.preview:hover > img {
+	filter: blur(2px);
 }
 
 .preview > .options {
@@ -118,7 +123,7 @@ main {
 	bottom: 4px;
 	left: 0;
 	padding: 0 15%;
-	background-color: hsla(0, 0%, 0%, 0.75);
+	background-color: hsla(0, 0%, 0%, 0.5);
 	opacity: 0;
 	transition: opacity 400ms;
 }
