--- a/app/index.css
+++ b/app/index.css
@@ -39,20 +39,52 @@ main {
 	overflow: hidden;
 }
 
+footer {
+	display: flex;
+	justify-content: space-between;
+	position: fixed;
+	bottom: 0;
+	z-index: 10;
+	width: 100%;
+	height: 25px;
+	background-color: black;
+	opacity: 0.8;
+}
+
+.api-options {
+	display: flex;
+	width: 100%;
+}
+
+.api-options > label {
+	display: flex;
+	align-items: center;
+	padding: 0 8px;
+	color: white;
+	background-color: transparent;
+	border: none;
+	outline: none;
+	-webkit-user-select: none;
+	        user-select: none;
+}
+
+.api-options > label > input {
+	margin-right: 4px;
+}
+
+.attribution {
+	width: 71.42px;
+}
+
+.attribution > img {
+	height: 100%;
+}
+
 .string-copy-container {
 	position: fixed;
 	top: 0;
 	left: 0;
 	opacity: 0;
-	pointer-events: none;
-}
-
-.attribution {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	z-index: 10;
-	width: 75px;
 	pointer-events: none;
 }
 
