--- a/app/index.css
+++ b/app/index.css
@@ -42,42 +42,32 @@ main {
 footer {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	position: fixed;
 	bottom: 0;
 	z-index: 10;
 	width: 100%;
-	height: 25px;
 	background-color: black;
 	opacity: 0.8;
 }
 
-.api-options {
-	display: flex;
-	width: 100%;
-}
-
-.api-options > label {
-	display: flex;
-	align-items: center;
-	padding: 0 8px;
-	color: white;
-	background-color: transparent;
-	border: none;
-	outline: none;
-	-webkit-user-select: none;
-	        user-select: none;
-}
-
-.api-options > label > input {
-	margin-right: 4px;
-}
-
 .attribution {
 	width: 71.42px;
+	height: 25px;
 }
 
 .attribution > img {
 	height: 100%;
+}
+
+.settings {
+	width: 20px;
+	height: 20px;
+	margin: 0 2.5px;
+	padding: 0;
+	background: transparent url(../assets/settings.svg) center/contain no-repeat;
+	border: none;
+	outline: none;
 }
 
 .string-copy-container {
